--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ th {
     border: 1px solid #dddddd;
     text-align: left;
     padding: 8px;
+    text-transform: capitalize;
 }
 
 tr:nth-child(even) {
